--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.726.1",
     "better-sqlite3": "^11.7.2",
     "next": "14.0.3",
     "react": "^18",
